# raglab

./: .env.example  .gitignore  .graphifyignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: agentic.yaml  benchmark.yaml  cloud.yaml  hybrid.yaml  ingest.yaml  naive.yaml
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
examples/docs/: embeddings_and_eval.md  raglab_overview.md
examples/qa/: qa.jsonl
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/obsidian/: .__enter__().md  .__exit__().md  .__init__().md  .__init__()_1.md  .__init__()_10.md  .__init__()_11.md  .__init__()_12.md  .__init__()_13.md  .__init__()_14.md  .__init__()_15.md  .__init__()_16.md  .__init__()_17.md  .__init__()_18.md  .__init__()_19.md  .__init__()_2.md  .__init__()_20.md  .__init__()_21.md  .__init__()_22.md  .__init__()_23.md  .__init__()_24.md  .__init__()_3.md  .__init__()_4.md  .__init__()_5.md  .__init__()_6.md  .__init__()_7.md  .__init__()_8.md  .__init__()_9.md  ._after_critic().md  ._after_grade().md  ._build_graph().md  ._cite().md  ._critic().md  ._embed().md  ._embed_one().md  ._ensure().md  ._ensure()_1.md  ._ensure()_2.md  ._ensure()_3.md  ._ensure()_4.md  ._ensure()_5.md  (+552 more)
graphify-out/obsidian/.obsidian/: graph.json
src/raglab/: __init__.py  api.py  cli.py  env.py  service.py
src/raglab/agents/: __init__.py  critic.py  grading.py  reasoning.py  rewrite.py
src/raglab/benchmarks/: __init__.py  runner.py
src/raglab/core/: __init__.py  config.py  interfaces.py  registry.py  types.py
src/raglab/embeddings/: __init__.py  cohere_embed.py  gemini_embed.py  hashing.py  local_embed.py  openai_embed.py
src/raglab/evaluation/: __init__.py  builtin.py  llm_judges.py  ragas_eval.py  reports.py
src/raglab/experiments/: __init__.py  store.py
src/raglab/graph/: __init__.py  extract.py  neo4j_store.py  store.py
src/raglab/ingestion/: __init__.py  enrich.py  pipeline.py
src/raglab/llms/: __init__.py  costs.py  echo.py  gemini_llm.py  openai_compat.py
src/raglab/observability/: __init__.py  tracer.py
src/raglab/pipelines/: __init__.py  adaptive.py  advanced.py  agentic.py  base.py  crag.py  deep_search.py  graph_rag.py  helpers.py  hierarchical.py  hybrid.py  kg_vector_rag.py  multi_hop.py  naive.py  reflective.py  self_rag.py  stubs.py
src/raglab/rerankers/: noop.py  (+3 more)
tests/integration/: test_end_to_end.py
tests/unit/: test_chunkers.py  test_config.py  test_fusion_and_costs.py  test_phase2_6.py  test_registry.py
(+16 files in other folders)
