[project]
name = "raglab"
version = "0.1.0"
description = "RAGLab — a modular, research-grade platform for benchmarking RAG architectures, embeddings, rerankers, retrievers, and LLMs under identical conditions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAGLab" }]

# The DEFAULT install is intentionally light and runs the full vertical slice
# entirely offline (hashing embedder + Qdrant in-memory + BM25 + an extractive
# LLM). Paid providers and heavy ML deps live behind optional extras so the
# slice is testable from a clean clone with zero API keys.
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "numpy>=1.26",
  "qdrant-client>=1.9",
  "rank-bm25>=0.2.2",
  "networkx>=3.2",
  "langchain-core>=0.2",
  "langgraph>=0.1",
]

[project.optional-dependencies]
# Cloud providers (OpenAI / Cohere / OpenRouter). OpenRouter is chat-only and
# reuses the OpenAI-compatible client.
providers = [
  "openai>=1.30",
  "cohere>=5.5",
  "google-genai>=0.3",
]
# Optional Neo4j backend for GraphRAG (networkx is the in-core default).
neo4j = ["neo4j>=5.20"]
# Local embeddings + cross-encoder reranker (pulls torch — large).
local = ["sentence-transformers>=3.0"]
# RAGAS automated evaluation (needs a judge LLM + embeddings).
eval = ["ragas>=0.2", "datasets>=2.19"]
# Observability backends.
obs = ["langfuse>=2.40"]
# Document parsers.
parsers = ["pypdf>=4.2", "python-docx>=1.1"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[project.scripts]
raglab = "raglab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raglab"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI/Typer use callables in defaults

[tool.mypy]
python_version = "3.11"
packages = ["raglab"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
  "integration: end-to-end tests that spin up Qdrant (in-memory by default)",
]
